--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#home">TEC CONCEITO</a>
+        <a class="logo" href="#home">STELLAR CELL</a>
         <!----------------------MENU------------------------------------>
         <div class="menu">
           <ul class="grid">
@@ -251,7 +251,7 @@
       <div class="container grid">
         <div class="brand">
           <a class="logo logo-alt" href="#"><span>TEC CONCEITO.</a>
-          <p>©️2022 TEC CONCEITO.</p>
+          <p>©️2022 STELLAR CELL.</p>
           <p>Todos os direitos reservados.</p>
         </div>
         
